# sbws

./: .coveragerc  .editorconfig  .gitattributes  .gitchangelog.rc  .gitchangelogrst.tpl  .gitignore  .gitlab-ci.yml  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  DEPLOY.rst  INSTALL.rst  LICENSE.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/actions/build-and-push/: action.yml
.github/actions/deploy/: action.yml
.github/workflows/: dev-deploy.yml  dev.yml  live-deploy.yml  live.yml  stage-deploy.yml  stage.yml
docker/: docker-compose.yml
docker/destination/: Dockerfile  default.conf  docker-entrypoint.sh
docker/relay/: anonrc
docker/scanner/: .sbws.ini  Dockerfile  anonrc  docker-entrypoint.sh
docs/source/: activity_aggr_lines.puml  activity_all.puml  activity_scaling_as_torflow.puml  activity_second_relay.puml  bandwidth_distribution.rst  bandwidth_file.rst  code_design.rst  conf.py  config.example.ini  config_tor.rst  contributing.rst  differences.rst  documenting.rst  generator.rst  glossary.rst  how_works.rst  implementation.rst  index.rst  man_sbws.ini.rst  man_sbws.rst  monitoring_bandwidth.rst  roadmap.rst  sbws.util.rst  testing.rst  torflow_aggr.rst  troubleshooting.rst
docs/source/_static/css/: tor.css
docs/source/_templates/: layout.html
docs/source/examples/: sbws.example.ini
operations/: deploy-dev.hcl  deploy-live.hcl  deploy-stage.hcl  sbws-regional-bootstrapping.hcl  sbws-regional-live.hcl  troubleshooting.md
operations/legacy/: deploy-live.legacy.hcl  deploy-stage.legacy.hcl
sbws/: __init__.py  _version.py  config.default.ini  globals.py  sbws.py
sbws/core/: cleanup.py  flowctrl2.py  generate.py  scanner.py  stats.py
sbws/lib/: bwfile_health.py  circuitbuilder.py  destination.py  heartbeat.py  relaylist.py  relayprioritizer.py  resultdump.py  scaling.py  v3bwfile.py
sbws/util/: config.py  filelock.py  fs.py  iso3166.py  json.py  parser.py  requests.py  state.py  stem.py  timestamp.py  timestamps.py  userquery.py
scripts/maint/: release.py
scripts/tools/: get-per-relay-budget.py
tests/: conftest.py
tests/integration/: async_https_server.py  conftest.py  run.sh  sbws_testnet.ini
tests/integration/chutney_data/: client_bwscanner.tmpl
tests/integration/core/: test_scanner.py
tests/integration/data/: localhost.crt  localhost.key
tests/integration/lib/: test_circuitbuilder.py  test_destination.py  test_relaylist.py  test_relayprioritizer.py
tests/integration/util/: test_requests.py  test_stem.py
tests/unit/: conftest.py  test_bwfile_health.py
tests/unit/core/: test_generate.py  test_scanner.py  test_stats.py
tests/unit/lib/: test_destination.py  test_heartbeat.py  test_relaylist.py  test_resultdump.py  test_results.py  test_scaling.py  test_v3bwfile.py
tests/unit/util/: test_config.py  test_state.py  test_stem.py  test_timestamp.py  test_timestamps.py  test_userquery.py
